--- a/index.html
+++ b/index.html
@@ -133,3 +133,11 @@
   <script src="script.js"></script>
 </body>
 </html>
+<div id="welcomePopup" class="popup">
+  <h2>🌳 Bienvenue</h2>
+  <p>Entre ton prénom pour créer la première fiche :</p>
+  <input type="text" id="firstNameInput" placeholder="Ton prénom">
+  <button id="startBtn">Commencer</button>
+</div>
+
+<div id="treeContainer" style="display:none;"></div>
